--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
         "nelson-ph/container_tag": "^2.0"
     },
     "require-dev": {
-        "phpro/grumphp": "^0.14.0",
-        "jakub-onderka/php-parallel-lint": "^1.0"
+        "phpro/grumphp": "*",
+        "jakub-onderka/php-parallel-lint": "*"
     },
     "license": "MIT",
     "authors": [
